--- a/css/main.css
+++ b/css/main.css
@@ -7,6 +7,11 @@ body{
 }
 a{
      text-decoration: none;
+     color: #1a1a1a;
+}
+a:hover{
+     color: #1a1a1a;
+     text-decoration: none;
 }
 .img-card{
      background-size: cover;
@@ -18,11 +23,14 @@ a{
 }
 /*Navbar class*/
 .navbar-black{
-     
      background-color: #1a1a1a !important;
      border-radius: 0%;
 }
 .subheader{
+     font-size: 40px;
+     color: #f3f3f3;
+}
+.subheader-small{
      font-size: 20px;
      color: #f3f3f3;
 }
@@ -43,13 +51,27 @@ a{
      transition: all 300ms;
 }
 /*slider*/
+#slider{
+     position: relative;
+     width: 100%;
+     max-height: 426px !important;
+     overflow: hidden;
+}
 .img-bg{
      width: 100%;
+     
 }
 
 /*content*/
+.img-company{
+     height: 100%;
+}
+.card-container{
+     background:#242a5c;
+     padding: 100px;
+}
 .main-presentation{
-     background: linear-gradient(to right, rgba(0,0,0,0.5),rgba(0,0,0,0.5)), url('../assets/img/bf-wallpaper.png');
+     background: linear-gradient(to right, rgba(26,65,120,0.5),rgba(26,65,120,0.5)), url('../assets/img/bf-wallpaper.png');
      background-repeat: no-repeat;
      background-size: cover;
      height: auto;
@@ -74,6 +96,28 @@ a{
      margin-top: 20px;
      margin-bottom: 150px;
 }
+
+.card{
+     border-radius: 0% !important;
+     margin-top: 10px;
+     margin-bottom: 10px;
+}
+.card-game{
+     padding: 35px;
+}
+.card-image-content{
+     margin-right: 50px;
+}
+.card-image-game{
+     height: 100%;
+     width: 100%;
+}
+.card-game-new{
+     color: #f17f1a;
+}
+.card-date{
+     font-weight: 400;
+}
 /*footer*/
 .footer-copyright{
      padding: 40px;
@@ -82,4 +126,36 @@ a{
      font-weight: 700;
      background-color: #1a1a1a;
      color: #f3f3f3;
+}
+
+/*Media query*/
+@media(max-width: 770px){
+     .secondary-title{
+          display: flex;
+          flex-wrap: wrap;
+          align-items: flex-start;
+     }
+     .card-image-content {
+          margin: 0px auto;
+     }
+     .card-container{
+          padding: 0px;
+     }
+     .responsive-small-content{
+          display: block;
+          width: 100%;
+          margin-top: 20px !important;
+          margin-bottom: 20px !important;
+          text-align: center;
+          margin: 0 auto;
+     }
+     .btn-sm{
+          margin: 0px;
+          width: 100% !important;
+          padding: 10px !important;
+     }
+     .btn-buy{
+          display: block;
+          margin-left: 0px;
+     }
 }
