--- a/css/main.css
+++ b/css/main.css
@@ -21,14 +21,32 @@ a:hover{
      display: block;
      margin: 0 auto;
 }
+.card-temporaly{
+     display: none !important;
+}
+.logo-responsive{
+     display: none !important;
+}
+
 /*Navbar class*/
 .navbar-black{
      background-color: #1a1a1a !important;
      border-radius: 0%;
 }
+.navbar-black a {
+     color: #f3f3f3;
+}
 .subheader{
      font-size: 40px;
      color: #f3f3f3;
+}
+.dropdown-menu{
+     border-radius: 0% !important;
+     transition: all 300ms;
+}
+.dropdown-menu a:hover{
+     color:#f17f1a;
+     background-color: #1a1a1a !important;
 }
 .subheader-small{
      font-size: 20px;
@@ -53,15 +71,28 @@ a:hover{
 /*slider*/
 #slider{
      position: relative;
+     display: block;
+     background: linear-gradient(to right, rgba(0,0,0,0.5),rgba(0,0,0,0.5)), url('../assets/img/bf-wallpaper.jpg');
+     background-size: cover;
      width: 100%;
-     max-height: 426px !important;
-     overflow: hidden;
+     color:#ffff;
+     padding: 50px;
+     min-height: 426px !important;
 }
-.img-bg{
-     width: 100%;
-     
+.alert-game{
+     display: block;
+     width: 25%;
+     float: right;
 }
-
+.alert-game-btn{
+     width: 100% !important;
+     height: 100%;
+     padding: 10px;
+     margin-right: 10px;
+}
+.alert-game-responsive{
+     display: none;
+}
 /*content*/
 .img-company{
      height: 100%;
@@ -101,13 +132,22 @@ a:hover{
      border-radius: 0% !important;
      margin-top: 10px;
      margin-bottom: 10px;
+     transition: all 300ms;
+}
+.card:hover{
+     transform: scale(1.1, 1.1);
 }
 .card-game{
      padding: 35px;
+     
 }
+
 .card-image-content{
      margin-right: 50px;
+     
+     
 }
+
 .card-image-game{
      height: 100%;
      width: 100%;
@@ -129,7 +169,7 @@ a:hover{
 }
 
 /*Media query*/
-@media(max-width: 770px){
+@media(max-width: 800px){
      .secondary-title{
           display: flex;
           flex-wrap: wrap;
@@ -141,11 +181,29 @@ a:hover{
      .card-container{
           padding: 0px;
      }
+     .card-temporaly{
+          display: block !important;
+     }
+     .logo-responsive{
+          display: block !important;
+          text-align: center !important;
+          margin-top: 10px;
+          margin-bottom: 10px;
+     }
+     .logo-normal-size{
+          display: none !important;
+     }
+     .secondary-title{
+          display: block;
+          margin: 0px auto;
+     }
      .responsive-small-content{
           display: block;
           width: 100%;
           margin-top: 20px !important;
           margin-bottom: 20px !important;
+          margin-right: 15px !important;
+          margin-left: 15px !important;
           text-align: center;
           margin: 0 auto;
      }
@@ -158,4 +216,16 @@ a:hover{
           display: block;
           margin-left: 0px;
      }
+     .alert-game{
+          display: none !important;
+     }
+     .alert-game-responsive{
+          display: block;
+          padding: 30px;
+          margin-top: 10px;
+          margin-bottom: 10px;
+          color:#f3f3f3;
+     }
+     
+     
 }
